<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="place"
            type="com.yllxh.tourassistant.data.source.local.database.entity.Place"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/isPrimaryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif"
            android:text="@string/is_primary"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="@color/colorTextDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/city_name"
            android:textColor="@color/colorTextDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/city_edit_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/country_edit_text" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="5dp"
            android:text="@string/country_name"
            android:textColor="@color/colorTextDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/country_edit_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/place_name_edit_text" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/city_name"
            android:textColor="@color/colorTextDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/city_edit_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/country_edit_text" />

        <EditText
            android:id="@+id/place_name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="sans-serif"
            android:hint="@string/place_name"
            android:text="@{place.name}"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            tools:text="@string/place_name" />

        <EditText
            android:id="@+id/country_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:hint="@string/country_name"
            android:text="@{place.location.country}"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="@+id/place_name_edit_text"
            app:layout_constraintStart_toStartOf="@+id/place_name_edit_text"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            tools:text="@string/country_name" />

        <EditText
            android:id="@+id/city_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:hint="@string/city_name"
            android:text="@{place.location.city}"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="@+id/country_edit_text"
            app:layout_constraintStart_toStartOf="@+id/country_edit_text"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            tools:text="@string/city_name" />

        <TextView
            android:id="@+id/importance_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/importance"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="@color/colorTextDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/city_edit_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/isPrimaryTextView"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <SeekBar
            android:id="@+id/importance_seekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="@{place.importance}"
            android:progressTint="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="@+id/importance_label_text_view"
            app:layout_constraintEnd_toStartOf="@+id/importance_textView"
            app:layout_constraintStart_toStartOf="@+id/city_edit_text"
            app:layout_constraintTop_toTopOf="@+id/importance_label_text_view"
            tools:progress="10" />

        <TextView
            android:id="@+id/importance_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_bookmark_48"
            android:gravity="center"
            android:text="@{String.valueOf(place.importance)}"
            android:textColor="@color/colorTextLight"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/importance_seekBar"
            app:layout_constraintEnd_toEndOf="@+id/city_edit_text"
            app:layout_constraintTop_toTopOf="@+id/importance_seekBar"
            tools:text="10" />

        <TextView
            android:id="@+id/lat_lng_text_view"
            lat_lng_of_place="@{place}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="@color/colorTextDark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/editLatLng"
            app:layout_constraintStart_toStartOf="@+id/editLatLng"
            app:layout_constraintTop_toBottomOf="@+id/editLatLng"
            tools:text="Lat, Lng: 22.22222, 33,33333" />

        <ImageButton
            android:id="@+id/editLatLng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/ic_edit_location_black_48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/importance_seekBar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/place_todo_recycleView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/add_todo_button"
            app:layout_constraintTop_toBottomOf="@+id/lat_lng_text_view"
            tools:layout_editor_absoluteX="8dp" />

        <Button
            android:id="@+id/add_todo_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/add_todo"
            android:textColor="@color/colorTextLight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/place_todo_recycleView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/place_name"
            android:textColor="@color/colorTextDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/is_primary_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@{place.primary}"
            app:layout_constraintBottom_toBottomOf="@+id/isPrimaryTextView"
            app:layout_constraintStart_toStartOf="@+id/city_edit_text"
            app:layout_constraintTop_toTopOf="@+id/isPrimaryTextView" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/is_primary_description"
            app:layout_constraintBottom_toBottomOf="@+id/is_primary_switch"
            app:layout_constraintEnd_toEndOf="@+id/city_edit_text"
            app:layout_constraintStart_toEndOf="@+id/is_primary_switch"
            app:layout_constraintTop_toTopOf="@+id/is_primary_switch" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>