<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!--        <import type="com.yllxh.tourassistant.R"/>-->
        <variable
            name="viewModel"
            type="com.yllxh.tourassistant.screens.followPath.FollowPathViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:context=".screens.followPath.FollowPathFragment" />

        <TextView
            android:id="@+id/second_destination_name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#8CFFFFFF"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/next_destination"
            android:textColor="#8C000000"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/second_destination_distance_text_view"
            app:layout_constraintStart_toStartOf="@+id/next_destination_name_text_view"
            app:layout_constraintTop_toBottomOf="@+id/third_destination_name_text_view"
            tools:text="Next destionation" />

        <TextView
            android:id="@+id/next_destination_name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#B3FFFFFF"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:text="@string/current_destination"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/next_destination_distance_text_view"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/second_destination_name_text_view"
            tools:text="Current destionation" />

        <TextView
            android:id="@+id/second_destination_distance_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#8CFFFFFF"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/_9_9m"
            android:textColor="#8C000000"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/next_destination_name_text_view"
            app:layout_constraintTop_toBottomOf="@+id/third_destination_distance_text_view"
            tools:text="9.9m" />

        <TextView
            android:id="@+id/third_destination_distance_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#8CFFFFFF"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="9.9m"
            android:textColor="#8C000000"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/second_destination_name_text_view"
            app:layout_constraintTop_toTopOf="@+id/third_destination_name_text_view"
            tools:text="9.9m" />

        <TextView
            android:id="@+id/third_destination_name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="#8CFFFFFF"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/next_destination"
            android:textColor="#8C000000"
            android:textSize="10sp"
            app:layout_constraintEnd_toStartOf="@+id/third_destination_distance_text_view"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Next destionation"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/next_destination_distance_text_view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="#B3FFFFFF"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/_9_9m"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/next_destination_name_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/second_destination_name_text_view"
            tools:text="9.9m" />

        <ImageButton
            android:id="@+id/track_user_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="#00FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/next_destination_name_text_view"
            app:srcCompat="@android:drawable/ic_menu_mylocation" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_more_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:onClick="@{() -> viewModel.onFabMoreOptionsClicked()}"
            tools:src="@drawable/fab_more_options_vertically_48dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <!--            fabDrawable="@{(viewModel.isFabMoreOptionsClicked == true) ? R.drawable.fab_more_options_horzontaly_48dp : R.drawable.fab_more_options_vertically_48dp}"-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fab_more_options_layout"
            view_visibility="@{viewModel.isFabMoreOptionsClicked}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:animateLayoutChanges="true"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/fab_more_options"
            app:layout_constraintEnd_toEndOf="@+id/fab_more_options"
            tools:visibility="visible">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_my_current_location_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                app:layout_constraintBottom_toTopOf="@+id/fab_toggle_notifications"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/fab_my_location_48dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/round_corners_transparent_gray"
                android:padding="8dp"
                android:text="@string/my_current_address"
                app:layout_constraintBottom_toBottomOf="@+id/fab_my_current_location_details"
                app:layout_constraintEnd_toStartOf="@+id/fab_my_current_location_details"
                app:layout_constraintTop_toTopOf="@+id/fab_my_current_location_details" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_toggle_notifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:onClick="@{() -> viewModel.onToggleNotifications()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:src="@drawable/fab_notifications_on_48dp"
                />
            <!--                fabDrawable="@{(viewModel.areNotificationsOn == true) ? R.drawable.fab_notifications_on_48dp : R.drawable.fab_notifications_off_48dp}" -->

            <TextView
                android:id="@+id/fab_notifcation_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/round_corners_transparent_gray"
                android:padding="8dp"
                tools:text="@string/notifications_on"
                app:layout_constraintBottom_toBottomOf="@+id/fab_toggle_notifications"
                app:layout_constraintEnd_toStartOf="@+id/fab_toggle_notifications"
                app:layout_constraintTop_toTopOf="@+id/fab_toggle_notifications" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!--                android:text="@{(viewModel.areNotificationsOn == true)  ? R.string.notifications_on : R.string.notifications_off}"-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
